--- a/src/view/PaymentWindowFXML.fxml
+++ b/src/view/PaymentWindowFXML.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -9,8 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="272.0" prefWidth="455.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/24.0.1" fx:controller="view.PaymentWindowFXMLController">
+<AnchorPane id="AnchorPane" prefHeight="272.0" prefWidth="455.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.PaymentWindowFXMLController">
    <children>
       <Text layoutX="43.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pago con tarjeta" wrappingWidth="165.89389419555664">
          <font>
@@ -27,20 +27,19 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField layoutX="142.0" layoutY="92.0" prefHeight="25.0" prefWidth="159.0" style="-fx-background-radius: 10;" />
-      <Label layoutX="94.0" layoutY="125.0" text="Caducidad:">
+      <TextField fx:id="textFieldNumTarjeta" layoutX="142.0" layoutY="92.0" prefHeight="25.0" prefWidth="159.0" style="-fx-background-radius: 10;" />
+      <Label layoutX="94.0" layoutY="127.0" text="Caducidad:">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField layoutX="142.0" layoutY="142.0" prefHeight="7.0" prefWidth="74.0" style="-fx-background-radius: 10;" />
-      <TextField layoutX="228.0" layoutY="142.0" prefHeight="17.0" prefWidth="74.0" style="-fx-background-radius: 10;" />
       <Label layoutX="96.0" layoutY="181.0" text="CVV:">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField layoutX="158.0" layoutY="198.0" prefHeight="4.0" prefWidth="139.0" style="-fx-background-radius: 10;" />
-      <Button layoutX="32.0" layoutY="233.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="391.0" style="-fx-background-radius: 10; -fx-background-color: Black;" text="Pay" textFill="WHITE" />
+      <TextField fx:id="textFieldCVV" layoutX="158.0" layoutY="198.0" prefHeight="4.0" prefWidth="139.0" style="-fx-background-radius: 10;" />
+      <Button fx:id="buttonPay" layoutX="32.0" layoutY="233.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="391.0" style="-fx-background-radius: 10; -fx-background-color: Black;" text="Pay" textFill="WHITE" />
+      <DatePicker fx:id="datePickerCaducidad" layoutX="140.0" layoutY="149.0" />
    </children>
 </AnchorPane>
