--- a/src/view/MainPageShoes.fxml
+++ b/src/view/MainPageShoes.fxml
@@ -6,88 +6,68 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.image.Image?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<SplitPane dividerPositions="0.195855614973262" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/24.0.1">
-  <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="172.0">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <VBox prefHeight="400.0" prefWidth="103.0" spacing="300.0">
          <children>
-            <MenuBar layoutX="-9.0" layoutY="113.0" rotate="90.0">
+            <ImageView fitHeight="71.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true" />
+            <MenuBar>
               <menus>
-                <Menu mnemonicParsing="false" text="File">
+                <Menu mnemonicParsing="false" text="Settings">
                   <items>
-                    <MenuItem mnemonicParsing="false" text="Close" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Edit">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="Delete" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="false" text="Help">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
+                    <MenuItem mnemonicParsing="false" text="DeleteUser" />
+                        <MenuItem mnemonicParsing="false" text="Modify Profile" />
                   </items>
                 </Menu>
               </menus>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
             </MenuBar>
-         </children></AnchorPane>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+         </children>
+         <HBox.margin>
+            <Insets />
+         </HBox.margin>
+      </VBox>
+      <VBox prefHeight="400.0" prefWidth="500.0">
          <children>
-            <SplitPane dividerPositions="0.13604417670682734" orientation="VERTICAL" prefHeight="400.0" prefWidth="478.0">
-              <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="3.0" prefWidth="477.0" />
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
+            <FlowPane hgap="10.0" prefHeight="29.0" prefWidth="476.0">
+               <children>
+                  <Label prefHeight="18.0" prefWidth="41.0" text="Search:" />
+                  <TextField fx:id="searchTextField" />
+                  <Label prefHeight="18.0" prefWidth="86.0" text="Filter by price:" />
+                  <ImageView fx:id="imgFilter" fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </FlowPane>
+            <ScrollPane prefHeight="371.0" prefWidth="476.0">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="369.0" prefWidth="474.0">
                      <children>
-                        <ScrollPane layoutY="-1.0" prefHeight="342.0" prefWidth="478.0">
-                          <content>
-                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0">
-                                 <children>
-                                    <GridPane prefHeight="320.0" prefWidth="400.0">
-                                      <columnConstraints>
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                      </columnConstraints>
-                                      <rowConstraints>
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                      </rowConstraints>
-                                       <children>
-                                          <VBox prefHeight="170.0" prefWidth="200.0">
-                                             <children>
-                                                <ImageView fx:id="imgShoe" fitHeight="93.0" fitWidth="165.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../images/Nike_court_blanco.jpg" />
-                                                   </image>
-                                                   <VBox.margin>
-                                                      <Insets top="20.0" />
-                                                   </VBox.margin>
-                                                </ImageView>
-                                                <Label fx:id="lblShoeName" text="NIke court Low" />
-                                                <Label fx:id="lblPrice" text="199.99€" textFill="RED" />
-                                             </children>
-                                          </VBox>
-                                          <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" />
-                                       </children>
-                                       <padding>
-                                          <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-                                       </padding>
-                                    </GridPane>
-                                 </children>
-                              </AnchorPane>
-                          </content>
-                        </ScrollPane>
+                        <GridPane layoutX="-1.0" layoutY="2.0" prefHeight="359.0" prefWidth="463.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                        </GridPane>
                      </children>
                   </AnchorPane>
-              </items>
-            </SplitPane>
-         </children></AnchorPane>
-  </items>
-</SplitPane>
+              </content>
+            </ScrollPane>
+         </children>
+      </VBox>
+   </children>
+</HBox>
