--- a/src/view/MainPageUser.fxml
+++ b/src/view/MainPageUser.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -16,31 +17,39 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainPageUserController">
    <children>
-      <VBox prefHeight="400.0" prefWidth="103.0" spacing="300.0">
+      <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="95.0" spacing="300.0" style="-fx-background-color: #5081b3;">
          <children>
-            <ImageView fitHeight="71.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true" />
-            <MenuBar>
-              <menus>
-                <Menu mnemonicParsing="false" text="Settings">
-                  <items>
-                    <MenuItem mnemonicParsing="false" text="DeleteUser" />
-                        <MenuItem mnemonicParsing="false" text="Modify Profile" />
-                  </items>
-                </Menu>
-              </menus>
+            <ImageView fitHeight="71.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/nike-3-64.png" />
+               </image>
                <VBox.margin>
                   <Insets />
-               </VBox.margin>
-            </MenuBar>
+               </VBox.margin></ImageView>
          </children>
          <HBox.margin>
             <Insets />
          </HBox.margin>
       </VBox>
-      <VBox prefHeight="400.0" prefWidth="500.0">
+      <VBox prefHeight="400.0" prefWidth="500.0" spacing="10.0">
          <children>
+            <FlowPane alignment="TOP_CENTER" prefHeight="33.0" prefWidth="498.0">
+               <children>
+                  <MenuBar fx:id="menu" maxWidth="-Infinity" style="-fx-background-radius: 50;">
+                    <menus>
+                        <Menu fx:id="menuHome" mnemonicParsing="false" text="Home" />
+                      <Menu fx:id="actionsMenu" mnemonicParsing="false" text="Settings">
+                        <items>
+                          <MenuItem fx:id="ModifyProfileSubmenu" mnemonicParsing="false" text="Modify Profile" />
+                        </items>
+                      </Menu>
+                        <Menu fx:id="menuHelp" mnemonicParsing="false" text="Help" />
+                    </menus>
+                  </MenuBar>
+               </children>
+            </FlowPane>
             <FlowPane hgap="10.0" prefHeight="29.0" prefWidth="476.0">
                <children>
                   <Label prefHeight="18.0" prefWidth="41.0" text="Search:" />
@@ -62,6 +71,18 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
+                           <children>
+                              <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0">
+                                 <children>
+                                    <ImageView fx:id="imgShoe" fitHeight="101.0" fitWidth="123.0" pickOnBounds="true" preserveRatio="true" />
+                                    <Label fx:id="lblShoeName" text="Label" />
+                                    <Label fx:id="lblPrice" text="Label" textFill="#ff1111" />
+                                 </children>
+                              </VBox>
+                           </children>
+                           <padding>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </padding>
                         </GridPane>
                      </children>
                   </AnchorPane>
