--- a/src/view/MainPageUser.fxml
+++ b/src/view/MainPageUser.fxml
@@ -45,6 +45,11 @@
                           <MenuItem fx:id="ModifyProfileSubmenu" mnemonicParsing="false" text="Modify Profile" />
                         </items>
                       </Menu>
+                        <Menu mnemonicParsing="false" text="Actions">
+                          <items>
+                            <MenuItem mnemonicParsing="false" text="Informe" />
+                          </items>
+                        </Menu>
                         <Menu fx:id="menuHelp" mnemonicParsing="false" text="Help" />
                     </menus>
                   </MenuBar>
@@ -62,7 +67,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="369.0" prefWidth="474.0">
                      <children>
-                        <GridPane layoutX="-1.0" layoutY="2.0" prefHeight="359.0" prefWidth="463.0">
+                        <GridPane fx:id="gridShoes" layoutX="-1.0" layoutY="2.0" prefHeight="359.0" prefWidth="463.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -72,7 +77,7 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <VBox prefHeight="200.0" prefWidth="100.0" spacing="5.0">
+                              <VBox fx:id="vBox" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
                                  <children>
                                     <ImageView fx:id="imgShoe" fitHeight="101.0" fitWidth="123.0" pickOnBounds="true" preserveRatio="true" />
                                     <Label fx:id="lblShoeName" text="Label" />
