--- a/src/view/MainPageUser.fxml
+++ b/src/view/MainPageUser.fxml
@@ -14,7 +14,6 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainPageUserController">
@@ -63,28 +62,15 @@
                   <ImageView fx:id="imgFilter" fitHeight="20.0" fitWidth="23.0" pickOnBounds="true" preserveRatio="true" />
                </children>
             </FlowPane>
-            <ScrollPane prefHeight="371.0" prefWidth="476.0">
+            <ScrollPane prefHeight="313.0" prefWidth="498.0">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="369.0" prefWidth="474.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="309.0" prefWidth="474.0">
                      <children>
-                        <GridPane fx:id="gridShoes" layoutX="-1.0" layoutY="2.0" prefHeight="359.0" prefWidth="463.0">
+                        <GridPane fx:id="gridShoes" layoutX="-1.0" layoutY="2.0" prefHeight="295.0" prefWidth="464.0" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <VBox fx:id="vBox" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
-                                 <children>
-                                    <ImageView fx:id="imgShoe" fitHeight="101.0" fitWidth="123.0" pickOnBounds="true" preserveRatio="true" />
-                                    <Label fx:id="lblShoeName" text="Label" />
-                                    <Label fx:id="lblPrice" text="Label" textFill="#ff1111" />
-                                 </children>
-                              </VBox>
-                           </children>
                            <padding>
                               <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                            </padding>
