--- a/src/view/MainPageUser.fxml
+++ b/src/view/MainPageUser.fxml
@@ -16,9 +16,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainPageUserController">
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainPageUserController">
    <children>
-      <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="95.0" spacing="300.0" style="-fx-background-color: #5081b3;">
+      <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="95.0" spacing="300.0" style="-fx-background-color: #5081b3;">
          <children>
             <ImageView fitHeight="71.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -34,9 +34,9 @@
       </VBox>
       <VBox prefHeight="400.0" prefWidth="500.0" spacing="10.0">
          <children>
-            <FlowPane alignment="TOP_CENTER" prefHeight="33.0" prefWidth="498.0">
+            <FlowPane alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="498.0">
                <children>
-                  <MenuBar fx:id="menu" maxWidth="-Infinity" style="-fx-background-radius: 50;">
+                  <MenuBar fx:id="menu" maxWidth="1.7976931348623157E308" style="-fx-background-radius: 50;">
                     <menus>
                         <Menu fx:id="menuHome" mnemonicParsing="false" text="Home" />
                       <Menu fx:id="actionsMenu" mnemonicParsing="false" text="Settings">
@@ -69,7 +69,7 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="534.0" prefWidth="474.0">
                      <children>
-                        <GridPane fx:id="gridShoes" layoutX="-1.0" layoutY="2.0" prefHeight="295.0" prefWidth="464.0" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                        <GridPane fx:id="gridShoes" layoutX="-1.0" layoutY="2.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="295.0" prefWidth="464.0" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
