--- a/src/view/AdminModifyShoeFXML.fxml
+++ b/src/view/AdminModifyShoeFXML.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -13,6 +14,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AdminModifyShoeFXMLController">
    <children>
@@ -68,6 +70,11 @@
                         </TableView>
                         <ImageView fitHeight="37.0" fitWidth="42.0" layoutX="418.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fitHeight="42.0" fitWidth="48.0" layoutX="415.0" layoutY="313.0" pickOnBounds="true" preserveRatio="true" />
+                        <Button fx:id="deleteButton" layoutX="413.0" layoutY="301.0" mnemonicParsing="false" onAction="#delete" style="-fx-background-color: #5081b3; -fx-background-radius: 10;" text="Delete" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Button>
                      </children>
                   </AnchorPane>
               </content>
