--- a/src/view/AdminModifyShoeFXML.fxml
+++ b/src/view/AdminModifyShoeFXML.fxml
@@ -75,6 +75,10 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Button>
+                        <Button layoutX="331.0" layoutY="301.0" mnemonicParsing="false" onAction="#addNew" style="-fx-background-color: #5081b3; -fx-background-radius: 10;" text="Add New" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Button>
                      </children>
                   </AnchorPane>
               </content>
