--- a/src/view/ShoeDetail.fxml
+++ b/src/view/ShoeDetail.fxml
@@ -116,12 +116,12 @@
 
                                  <Label fx:id="lblStock" style="-fx-text-fill: #1b8f2b; -fx-font-weight: bold;" text="Only 10 units left!" />
 
-                                 <Button fx:id="btnAddToCart" prefWidth="200.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 30; -fx-font-weight: bold; -fx-padding: 10 0 10 0;" text="Add to cart" />
+                                 <Button fx:id="buyProductButton" onAction="#buyProduct" prefWidth="200.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 30; -fx-font-weight: bold; -fx-padding: 10 0 10 0;" text="Buy product!" />
 
                               </VBox>
                            </HBox>
                         </VBox>
-                        <Button layoutX="427.0" layoutY="6.0" mnemonicParsing="false" style="-fx-background-color: black; -fx-background-radius: 20;" text="Back" onAction="#onBack" textFill="WHITE">
+                        <Button layoutX="427.0" layoutY="6.0" mnemonicParsing="false" onAction="#onBack" style="-fx-background-color: black; -fx-background-radius: 20;" text="Back" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
