--- a/src/view/AdminModifyShoeFXML.fxml
+++ b/src/view/AdminModifyShoeFXML.fxml
@@ -17,69 +17,77 @@
 <?import javafx.scene.text.Font?>
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AdminModifyShoeFXMLController">
-   <children>
-      <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="95.0" spacing="300.0" style="-fx-background-color: #5081b3;">
-         <children>
-            <ImageView fitHeight="71.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../images/nike-3-64.png" />
-               </image>
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin></ImageView>
-         </children>
-         <HBox.margin>
-            <Insets />
-         </HBox.margin>
-      </VBox>
-      <VBox prefHeight="400.0" prefWidth="500.0" spacing="10.0">
-         <children>
-            <FlowPane alignment="TOP_CENTER" prefHeight="33.0" prefWidth="498.0">
-               <children>
-                  <MenuBar fx:id="menu" maxWidth="-Infinity" style="-fx-background-radius: 50;">
-                    <menus>
-                        <Menu fx:id="menuHome" mnemonicParsing="false" text="Home" />
-                        <Menu fx:id="menuActions" mnemonicParsing="false" text="Actions">
-                          <items>
-                            <MenuItem fx:id="menuReport" mnemonicParsing="false" onAction="#openReport" text="Informe" />
-                              <MenuItem fx:id="menuSettings" mnemonicParsing="false" onAction="#openModifyProfileWindow" text="Settings" />
-                          </items>
-                        </Menu>
-                        <Menu fx:id="menuHelp" mnemonicParsing="false" onAction="#openManual" text="Help" />
-                    </menus>
-                  </MenuBar>
-               </children>
-            </FlowPane>
-            <ScrollPane prefHeight="423.0" prefWidth="498.0">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="534.0" prefWidth="474.0">
-                     <children>
-                        <TableView fx:id="tableShoe" layoutX="14.0" layoutY="67.0" prefHeight="200.0" prefWidth="454.0">
-                          <columns>
-                            <TableColumn fx:id="columnBrand" prefWidth="75.0" text="Brand" />
-                            <TableColumn fx:id="columnModel" prefWidth="75.0" text="Model" />
-                              <TableColumn fx:id="columnColor" prefWidth="75.0" text="Color" />
-                              <TableColumn fx:id="columnSize" prefWidth="75.0" text="Size" />
-                              <TableColumn fx:id="columnPrice" prefWidth="75.0" text="Price" />
-                              <TableColumn fx:id="columnStock" prefWidth="75.0" text="Stock" />
-                          </columns>
-                        </TableView>
-                        <ImageView fitHeight="37.0" fitWidth="42.0" layoutX="418.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fitHeight="42.0" fitWidth="48.0" layoutX="415.0" layoutY="313.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="deleteButton" layoutX="413.0" layoutY="301.0" mnemonicParsing="false" onAction="#delete" style="-fx-background-color: #5081b3; -fx-background-radius: 10;" text="Delete" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Button>
-                        <Button fx:id="addButton" layoutX="331.0" layoutY="301.0" mnemonicParsing="false" onAction="#addNew" style="-fx-background-color: #5081b3; -fx-background-radius: 10;" text="Add New" textFill="WHITE">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font></Button>
-                     </children>
-                  </AnchorPane>
-              </content>
-            </ScrollPane>
-         </children>
-      </VBox>
-   </children>
+    <children>
+        <VBox alignment="TOP_CENTER" prefHeight="400.0" prefWidth="95.0" spacing="300.0" style="-fx-background-color: #5081b3;">
+            <children>
+                <ImageView fitHeight="71.0" fitWidth="124.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@../images/nike-3-64.png" />
+                    </image>
+                    <VBox.margin>
+                        <Insets />
+                    </VBox.margin>
+                </ImageView>
+            </children>
+            <HBox.margin>
+                <Insets />
+            </HBox.margin>
+        </VBox>
+        <VBox prefHeight="400.0" prefWidth="500.0" spacing="10.0">
+            <children>
+                <FlowPane alignment="TOP_CENTER" prefHeight="33.0" prefWidth="498.0">
+                    <children>
+                        <MenuBar fx:id="menu" maxWidth="-Infinity" style="-fx-background-radius: 50;">
+                            <menus>
+                                <Menu fx:id="menuHome" mnemonicParsing="false" text="Home" />
+                                <Menu fx:id="menuActions" mnemonicParsing="false" text="Actions">
+                                    <items>
+                                        <MenuItem fx:id="menuReport" mnemonicParsing="false" onAction="#openReport" text="Informe" />
+                                        <MenuItem fx:id="menuSettings" mnemonicParsing="false" onAction="#openModifyProfileWindow" text="Settings" />
+                                    </items>
+                                </Menu>
+                                <Menu fx:id="menuHelp" text="Help">
+                                    <items>
+                                        <MenuItem fx:id="menuHelpItem"
+                                                  text="Get Help"
+                                                  onAction="#openManual"/>
+                                    </items>
+                                </Menu>
+                            </menus>
+                        </MenuBar>
+                    </children>
+                </FlowPane>
+                <ScrollPane prefHeight="423.0" prefWidth="498.0">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="534.0" prefWidth="474.0">
+                            <children>
+                                <TableView fx:id="tableShoe" layoutX="14.0" layoutY="67.0" prefHeight="200.0" prefWidth="454.0">
+                                    <columns>
+                                        <TableColumn fx:id="columnBrand" prefWidth="75.0" text="Brand" />
+                                        <TableColumn fx:id="columnModel" prefWidth="75.0" text="Model" />
+                                        <TableColumn fx:id="columnColor" prefWidth="75.0" text="Color" />
+                                        <TableColumn fx:id="columnSize" prefWidth="75.0" text="Size" />
+                                        <TableColumn fx:id="columnPrice" prefWidth="75.0" text="Price" />
+                                        <TableColumn fx:id="columnStock" prefWidth="75.0" text="Stock" />
+                                    </columns>
+                                </TableView>
+                                <ImageView fitHeight="37.0" fitWidth="42.0" layoutX="418.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+                                <ImageView fitHeight="42.0" fitWidth="48.0" layoutX="415.0" layoutY="313.0" pickOnBounds="true" preserveRatio="true" />
+                                <Button fx:id="deleteButton" layoutX="413.0" layoutY="301.0" mnemonicParsing="false" onAction="#delete" style="-fx-background-color: #5081b3; -fx-background-radius: 10;" text="Delete" textFill="WHITE">
+                                    <font>
+                                        <Font name="System Bold" size="12.0" />
+                                    </font>
+                                </Button>
+                                <Button fx:id="addButton" layoutX="331.0" layoutY="301.0" mnemonicParsing="false" onAction="#addNew" style="-fx-background-color: #5081b3; -fx-background-radius: 10;" text="Add New" textFill="WHITE">
+                                    <font>
+                                        <Font name="System Bold" size="12.0" />
+                                    </font>
+                                </Button>
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </ScrollPane>
+            </children>
+        </VBox>
+    </children>
 </HBox>
