--- a/src/view/PaymentWindowFXML.fxml
+++ b/src/view/PaymentWindowFXML.fxml
@@ -39,7 +39,15 @@
          </font>
       </Label>
       <TextField fx:id="textFieldCVV" layoutX="158.0" layoutY="198.0" prefHeight="4.0" prefWidth="139.0" style="-fx-background-radius: 10;" />
-      <Button fx:id="buttonPay" layoutX="32.0" layoutY="233.0" mnemonicParsing="false" onAction="#pay" prefHeight="25.0" prefWidth="391.0" style="-fx-background-radius: 10; -fx-background-color: Black;" text="Pay" textFill="WHITE" />
+      <Button fx:id="buttonPay" layoutX="32.0" layoutY="233.0" mnemonicParsing="false" onAction="#pay" prefHeight="25.0" prefWidth="391.0" style="-fx-background-radius: 10; -fx-background-color: #5081b3;" text="Pay" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Button>
       <DatePicker fx:id="datePickerCaducidad" layoutX="140.0" layoutY="149.0" />
+      <Button fx:id="backButton" layoutX="387.0" layoutY="25.0" mnemonicParsing="false" onAction="#back" style="-fx-background-radius: 10; -fx-background-color: #5081b3;" text="Back" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
